# moirai

./: .gitignore  CMakeLists.txt  LICENSE  README.md  shell.nix
src/: CMakeLists.txt  application.cpp  application.hpp  c_application.cpp  c_application.hpp  debug.cpp  debug.hpp  main.cpp
src/layers/: CMakeLists.txt  c_data_layer.cpp  c_data_layer.hpp  c_logic_layer.cpp  c_logic_layer.hpp  c_visual_layer.cpp  c_visual_layer.hpp  data_layer.cpp  data_layer.hpp  logic_layer.cpp  logic_layer.hpp  visual_layer.cpp  visual_layer.hpp
src/node/: CMakeLists.txt  c_node.cpp  c_node.hpp  node.cpp  node.hpp
test/: CMakeLists.txt  test.cpp
test/layers/: CMakeLists.txt  c_data_layer_test.cpp  data_layer_test.cpp
tools/: do.py
